adjust DJ resource limits. Fix git sync to handle ssh. Fix IG chart to use git init container